--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "setup": "node ./lib/setup.mjs"
   },
   "dependencies": {
+    "@next/third-parties": "^14.2.5",
     "@primer/octicons-react": "^19.10.0",
     "@primer/react": "^36.26.0",
     "dotenv": "^16.4.5",
